Fix and update proportion calculations
- add proportions for under-5 survival and stunting;
- fix calculation for schooling;
- fix adding multiple special results to bar chart CSV;
- update GRADE logo;
- fix Plotly toolbar layout issue

--- a/style.css
+++ b/style.css
@@ -711,9 +711,14 @@ input[type="file"] {
 }
 
 #logo-item {
-    background-color: lightgray;
+    display: flex;
+    justify-content: center;
 }
 
 .plot-title {
     font-size: 140%;
+}
+
+.js-plotly-plot .plotly .modebar svg {
+		display: inline;
 }
